# AI-Playwright-Test-Generator

./: .bashrc  .clineignore  .clinerules  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  BACKLOG.md  CHANGELOG.md  CONTEXT.md  CONTRIBUTING.md  DEMO_GUIDE.md  Dockerfile  FEATURE_SPEC_multi_page_scraping.md  FEATURE_SPEC_run_results.md  FEATURE_SPEC_session_01_skeleton_engine.md  FEATURE_SPEC_session_02_placeholder_resolver.md  FEATURE_SPEC_session_03_orchestrator.md  FIX_PLAN_session9.md  FIX_SUMMARY.md  ISSUES_FOUND_AND_FIXES.md  LICENSE  PROJECT_KNOWLEDGE.md  README.md  SCRAPER_TEST_RESULTS.md  SECURITY.md  bench_windows_vulkan_mtp_20260520_100044.json  bench_windows_vulkan_mtp_q5_k_xl_20260531_105732.json  bench_windows_vulkan_mtp_q5_k_xl_20260531_111054.json  build-docs.ps1  coverage.json  coverage.xml  diff_orchestrator.txt  diff_resolver.txt  docker-compose.yml  fix.sh  kanban.html  launch_cli.sh  launch_dev.sh  (+26 more)
.playwright-mcp/: page-2026-07-23T22-40-30-115Z.yml  page-2026-07-23T23-11-42-724Z.yml  page-2026-07-23T23-11-51-645Z.yml
assets/: DEMO_ASSETS_README.md  short_video_script.md  short_video_shots.md  short_video_spoken.txt
cli/: __init__.py  color.py  evidence_cli.py  evidence_generator.py  input_parser.py  main.py  menu_renderer.py  pipeline_runner.py  report_generator.py  retro_ui.py  run_results_display.py  session.py  story_analyzer.py  terminal_adapter.py  test_case_orchestrator.py  test_orchestrator.py  testing_terminal.py
docs/: ARCHITECTURE.md  DEMO_GUIDE.md  DEMO_GUIDE_PHONE.md  PROJECT_KNOWLEDGE.md  links.csv  (+7 more)
(+643 files in other folders)
