[project]
name = "vs-projects"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai>=2.3.0",
    "playwright>=1.40.0",
    "pytest-playwright>=0.4.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "ollama>=0.1.0",
]
